tests/reject/float_int_var_ord.ty
# An int VARIABLE never widens to float -- only an int LITERAL adapts. Ordering a
# float against an int variable is a type error in BOTH compilers. Locks the
# parity: tychoc0 used to silently coerce the variable (tychoc always rejected).
fn main():
    f := 3.5
    n := 2
    println(str(f < n))
